<resources>
    <string name="app_name">Xpress</string>
    <string name="facebook_app_id">2335117853474777</string>
    <string name="fb_login_protocol_scheme">fb2335117853474777</string>
    <string name="xpress_logo">Xpress Logo</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_caps">EMAIL</string>
    <string name="hint_password">Palavra-passe</string>
    <string name="hint_forgot_password">Esqueceu a palavra-passe?</string>
    <string name="hint_btn_login">Entrar</string>
    <string name="hint_registe_se">Não tem uma conta? Registe-se</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="motoboy_logo">Motoboy Logo</string>
    <string name="foto_de_usuario">Foto de usuario</string>
    <string name="primeiro_nome">Primeiro nome</string>
    <string name="primeiro_nome_caps">PRIMEIRO NOME</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="sobrenome_caps">ÚLTIMO NOME</string>
    <string name="numero_telefone">Nº de telefone</string>
    <string name="telefone_alternativo">Nº alternativo</string>
    <string name="municipio">Município</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="numero_da_casa">Nº da casa</string>
    <string name="btn_registar_text">Registar</string>
    <string name="cancelar">Cancelar</string>
    <string name="entrar_com_outra_conta">Entrar com outra conta</string>
    <string name="alterar_palavra_passe">Alterar palavra-passe</string>
    <string name="alterar_palavra_passe_telef">Insira o seu nº de telefone para alterar a sua palavra-passe.</string>
    <string name="hit_enviar_telef">Insira o nº de telefone e o endereço para fazer o seu pedido</string>
    <string name="alterar_palavra_passe_confirmcode_text">Insira o seu código de confirmação</string>
    <string name="alterar_palavra_passe_codedenied_text">Não recebeu o código?</string>
    <string name="txtTentarNovamente">Tentar outra vez</string>
    <string name="hit_codigo_confirm">Código de confirmação</string>
    <string name="hit_nova_senha">Nova palavra-passe</string>
    <string name="hit_btn_enviar_cod">Continuar</string>
    <string name="msg_erro_password_diferentes">Palavra-passe diferente.</string>
    <string name="enviar">Enviar</string>
    <string name="ok">OK</string>
    <string name="sucesso">Sucesso!</string>
    <string name="msg_conta_criada_sucesso">A sua conta foi criada com sucesso!</string>
    <string name="txtTentarmaistarde">Tentar mais tarde.</string>
    <string name="msg_erro_num_telefone_invalido">Preencha com um número válido.</string>
    <string name="msg_erro_num_telefone">Preencha o campo com um de nº telefone.</string>
    <string name="msg_support_telefone">Enviamos o código de confirmação para </string>
    <string name="msg_corfim_code_reenviado">O código de confirmação foi reenviado.</string>
    <string name="msg_confirm_code">Insira o código de confirmação.</string>
    <string name="msg_confirm_code_short">Termine de inserir o código de confirmação.</string>
    <string name="msg_sucesso_senha_alterada">A sua palavra-passe foi alterada com sucesso!</string>
    <string name="msg_erro_campo_vazio">Preencha o campo.</string>
    <string name="msg_erro_campo_com_letras">Preencha o campo com letras.</string>
    <string name="msg_erro_campo_com_email_telefone">Preencha o campo com email ou nº de telefone.</string>
    <string name="msg_erro_min_tres_letras">Preencha o campo no mínimo com 3 letras.</string>
    <string name="msg_erro_password_fraca">Palavra-passe fraca.</string>
    <string name="msg_erro_email_invalido">Preencha o campo com email válido.</string>
    <string name="msg_erro_internet">O dispositivo não está conectado a nenhuma rede 3G ou WI-FI.</string>
    <string name="msg_erro_internet_timeout">O tempo de comunicação excedeu. Possivelmente a internet está lenta.</string>
    <string name="msg_erro">Algum problema ocorreu. Relate o problema.</string>
    <string name="msg_login_auth_verification">Verificando…</string>
    <string name="msg_register_quase_pronto">Quase pronto…</string>
    <string name="msg_login_auth_carregando_dados">Carregando dados…</string>
    <string name="xpress_realm_db">xpress_realm_db</string>
    <string name="gender_male">M</string>
    <string name="gender_female">F</string>
    <string name="msg_selecione_genero">Selecione o género.</string>
    <string name="msg_confirmar_processo">msg_confirmar_processo</string>
    <string name="titulo_confirmar_processo">titulo_confirmar_processo</string>
    <string name="negar_confirm">Não</string>
    <string name="aceitar_confirm">Sim</string>
    <string name="registo_sem_foto">Registro sem foto!</string>
    <string name="msg_deseja_continuar">Deseja continuar?</string>
    <string name="msg_login_auth_validando">Validando os dados…</string>
    <string name="terminar_sessao">Terminar a sessão</string>
    <string name="sem_imagem">Sem Imagem</string>
    <string name="msg_email_palavra_passe_errada">As suas credenciais estão erradas.</string>
    <string name="criar_conta">Criar conta</string>
    <string name="msg_erro_user_not_found">Este utilizador não exite!</string>
    <string name="enviando_num_telefone">A enviar o nº de telefone…</string>
    <string name="reenviando_num_telefone">A reenviar o nº de telefone…</string>
    <string name="enviando_confirm_code">Enviando o código de confirmação…</string>
    <string name="msg_confirm_code_min_three">3 dígitos no mínimo.</string>
    <string name="msg_confirm_code_incorrecto">Código incorrecto.</string>
    <string-array name="cidade">
        <item>Bengo</item>
        <item>Benguela</item>
        <item>Bié</item>
        <item>Cabinda</item>
        <item>Cuando-Cubango</item>
        <item>Cuanza Norte</item>
        <item>Cuanza Sul</item>
        <item>Cunene</item>
        <item>Huambo</item>
        <item>Huíla</item>
        <item>Luanda</item>
        <item>Lunda Norte</item>
        <item>Lunda Sul</item>
        <item>Malanje</item>
        <item>Moxico</item>
        <item>Namibe</item>
        <item>Uíge</item>
        <item>Zaire</item>
    </string-array>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Definições</string>
    <string name="xpress.co.ao">xpressentregas.com</string>
    <string name="enviar_email_client">Enviar email</string>
    <string name="genero_sexo">Sexo:</string>
    <string name="toast_image_intent_null">Falta a opção de seletor de imagem!</string>
    <string name="price_with_currency">%.2f</string>
    <string name="order_id">Encomenda #%s</string>
    <string name="lbl_item_price_quantity">%s x %d</string>
    <string name="cart_info_bar_items">%d Items</string>
    <string name="cart_info_bar_total">Total: %.2f</string>
    <string name="dialog_permission_title">Conceder permissões</string>
    <string name="dialog_permission_message">Este aplicativo precisa de permissão para usar este recurso. Você pode concedê-los nas configurações do aplicativo.</string>
    <string name="go_to_settings">VÁ PARA AS CONFIGURAÇÕES</string>
    <string name="pesquisar">pesquisar</string>
    <string name="txt_xpress">Xpress</string>
    <string name="nav_home_title">Início</string>
    <string name="nav_meu_perfil_title">Meu Perfil</string>
    <string name="nav_encomendas_title">Encomendas</string>
    <string name="nav_mapa_title">Mapa</string>
    <string name="nav_carteira_title">Carteira Xpress</string>
    <string name="nav_escolher_filtros_title">Filtros</string>
    <string name="nav_pesquisar_title">Pesquisar</string>
    <string name="group_redes_sociais_title">Redes Sociais</string>
    <string name="nav_partilhar_title">Partilhar</string>
    <string name="email_ou_num_de_telefone">Email /Nº de telefone</string>
    <string name="escolher_fotografia">Escolher fotografia</string>
    <string name="carrinho">Carrinho</string>
    <string name="a_sessao_expirou">A sua sessão expirou!</string>
    <string name="inicie_outra_vez_a_sessao">Inicie outra vez a sessão.</string>
    <string name="minha_localizacao">Minha localização</string>
    <string name="txt_deseja_usar_esse_endereco">Deseja usar este endereço?</string>
    <string name="one">1</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="contactos">Contactos</string>
    <string name="contactos_caps">TELEFONE</string>
    <string name="genero">Género</string>
    <string name="genero_caps">GÉNERO</string>
    <string name="provincia">Província</string>
    <string name="endereco">Endereço</string>
    <string name="endereco_caps">LOCALIDADE</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="salvar">Salvar</string>
    <string name="dados_salvos_com_sucesso">Seus dados foram salvos com sucesso!</string>
    <string name="salvando_foto">Salvando a foto…</string>
    <string name="foto_atualizada_com_sucesso">Foto de perfil atualizada com sucesso!</string>
    <string name="checkout">Checkout</string>
    <string name="local_de_entrega">Local de entrega</string>
    <string name="quer_usar_o_seu_n_toque_aqui">Quer usar o seu nº? Toque aqui!</string>
    <string name="continuar">Continuar</string>
    <string name="tipo_de_pagamento">Tipo de Pagamento</string>
    <string name="escolha_o_tipo_de_pagamento">Escolha o tipo de pagamento</string>
    <string name="multicaixa">Multicaixa</string>
    <string name="referencia">Referência</string>
    <string name="enviar_pedido">Enviar Pedido</string>
    <string name="pedido_enviado_com_sucesso">O seu pedido foi enviado com sucesso!</string>
    <string name="pedido_nao_foi_enviado">O seu pedido não foi enviado!</string>
    <string name="msg_tem_certeza">Tem a certeza?</string>
    <string name="msg_remover_um_item">Essa acção irá remover o item do seu carrinho.</string>
    <string name="msg_remover_todos_items">Essa acção irá remover todos os items do seu carrinho.</string>
    <string name="txt_descricao">Descrição</string>
    <string name="splash_sign_up_hint">NÃO POSSUI UMA CONTA? SIGN UP </string>
    <string name="hint_comecar">COMEÇAR</string>
    <string name="hint_lembrar_me">Lembrar-me</string>
    <string name="hint_o_melhor_na_tua_cidade">Explora o melhor que há na tua cidade!</string>
    <string name="hint_produtos_tua_disposicao">Todos os produtos à tua disposição!</string>
    <string name="hint_termos_e_condicoes">ACEITO OS TERMOS E CONDIÇÕES</string>
    <string name="hint_prioridade_da_xpress_tua_saude">A maior prioridade da Xpress é a tua saúde e a tua segurança</string>
    <string name="hint_principais_medidas_de_prevencao">Queremos recordar-te das principais medidas de prevenção recomendadas pela organização</string>
    <string name="hint_lava_maos">Lava as tuas mãos com frequência</string>
    <string name="hint_email_telefone">Email/Telefone</string>
    <string name="title_quantidade">Quantidade</string>
    <string name="title_extras">Extras</string>
    <string name="n_mero_da_conta">NÚMERO DA CONTA</string>
    <string name="credito_title">CRÉDITO</string>
    <string name="num_do_bilhete_de_identidade">Nº do Bilhete de Identidade</string>
    <string name="criar_carteira_xpress">Criar Carteira Xpress</string>
    <string name="entrega">Entrega</string>
    <string name="encontrar_por">Encontrar por</string>
    <string name="filtros">Filtros</string>
    <string name="filtros_adicionais">Filtros adicionais</string>
    <string name="aplicar">Aplicar</string>
</resources>