<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_menu_home"
            android:icon="@drawable/ic_home"
            app:iconTint="@color/nav_menu_icon_color"
            android:title="@string/nav_home_title"/>

        <item android:id="@+id/nav_menu_perfil"
            android:icon="@drawable/ic_perfil"
            app:iconTint="@color/nav_menu_icon_color"
            android:title="@string/nav_meu_perfil_title"/>

        <!--        <item android:id="@+id/nav_menu_favoritos"
        android:icon="@drawable/ic_favorite_orange_24dp"
        android:title="Favoritos"/>-->

        <item android:id="@+id/nav_menu_encomendas"
            android:icon="@drawable/ic_encomenda"
            app:iconTint="@color/nav_menu_icon_color"
            android:title="@string/nav_encomendas_title"/>

        <item android:id="@+id/nav_menu_mapa"
            android:icon="@drawable/ic_mapa"
            app:iconTint="@color/nav_menu_icon_color"
            android:title="@string/nav_mapa_title"/>

        <item android:id="@+id/nav_menu_wallet"
            android:icon="@drawable/ic_carteira"
            app:iconTint="@color/nav_menu_icon_color"
            android:title="@string/nav_carteira_title"/>

    </group>


</menu>
