<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_menu_home">

    <fragment
        android:id="@+id/nav_menu_home"
        android:name="ao.co.proitconsulting.xpress.fragmentos.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_catestab"
        android:name="ao.co.proitconsulting.xpress.fragmentos.estab.CategoryEstabFragment"
        tools:layout="@layout/fragment_categoryestab" />

    <fragment
        android:id="@+id/nav_produtos_estab"
        android:name="ao.co.proitconsulting.xpress.fragmentos.produtos_estab.ProdutosEstabFragment"
        tools:layout="@layout/fragment_produtos_estab" />



    <fragment
        android:id="@+id/nav_produto_detail"
        android:name="ao.co.proitconsulting.xpress.fragmentos.produtos_detail.ProdutoDetailFragment"
        tools:layout="@layout/fragment_produto_detail" />

    <fragment
        android:id="@+id/nav_menu_perfil"
        android:name="ao.co.proitconsulting.xpress.fragmentos.perfil.PerfilFragment"
        android:label="@string/nav_meu_perfil_title"
        tools:layout="@layout/fragment_perfil">
        <action
            android:id="@+id/action_nav_perfil_to_nav_editar_perfil"
            app:destination="@id/nav_editar_perfil" />
    </fragment>

    <fragment
        android:id="@+id/nav_editar_perfil"
        android:name="ao.co.proitconsulting.xpress.fragmentos.perfil.EditarPerfilFragment"
        android:label="@string/editar_perfil"
        tools:layout="@layout/fragment_editar_perfil">

        <action
            android:id="@+id/action_nav_editar_perfil_to_nav_perfil"
            app:destination="@id/nav_menu_perfil" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu_encomendas"
        android:name="ao.co.proitconsulting.xpress.fragmentos.encomenda.EncomendasFragment"
        android:label="@string/nav_encomendas_title"
        tools:layout="@layout/fragment_encomendas" />

    <fragment
        android:id="@+id/nav_menu_encomendas_actuais"
        android:name="ao.co.proitconsulting.xpress.fragmentos.encomenda_actual.EncomendasActuaisFragment"
        tools:layout="@layout/fragment_encomendas_actuais" />

    <fragment
        android:id="@+id/nav_menu_encomendas_historico"
        android:name="ao.co.proitconsulting.xpress.fragmentos.encomenda_history.EncomendasHistoricoFragment"
        tools:layout="@layout/fragment_encomendas_historico" />

    <fragment
        android:id="@+id/nav_menu_encomenda_detail"
        android:name="ao.co.proitconsulting.xpress.fragmentos.encomenda_detail.EncomendaDetailFragment"
        tools:layout="@layout/fragment_encomenda_detail" />

    <fragment
        android:id="@+id/nav_menu_encomenda_tracker"
        android:name="ao.co.proitconsulting.xpress.fragmentos.encomenda_tracker.EncomendaTrackerFragment"
        tools:layout="@layout/fragment_encomenda_tracker" />

    <fragment
        android:id="@+id/nav_menu_mapa"
        android:name="ao.co.proitconsulting.xpress.fragmentos.mapa.MapaFragment"
        android:label="@string/nav_mapa_title"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_menu_wallet"
        android:name="ao.co.proitconsulting.xpress.fragmentos.carteira_xpress.CarteiraXpressFragment"
        android:label="@string/nav_carteira_title"
        tools:layout="@layout/fragment_carteira_xpress_saldo" />

    <fragment
        android:id="@+id/nav_menu_escolher_filtros"
        android:name="ao.co.proitconsulting.xpress.fragmentos.telafiltros.EscolherFiltrosFragment"
        android:label="@string/nav_escolher_filtros_title"
        tools:layout="@layout/fragment_escolher_filtros" />

    <fragment
        android:id="@+id/nav_menu_pesquisar"
        android:name="ao.co.proitconsulting.xpress.fragmentos.telasallestab.PerquisarTodosEsbalecimentosFragment"
        android:label="@string/nav_pesquisar_title"
        tools:layout="@layout/fragment_pesquisar_todos_estabs" />

</navigation>