<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="8dp"
    app:cardCornerRadius="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="15dp"
        android:id="@+id/linearLayout_AlterarPass"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:src="@drawable/xpress_logo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="center"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@color/login_register_text_color"
            android:text="@string/alterar_palavra_passe"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:lines="2"
            android:textColor="@color/black"
            android:text="@string/alterar_palavra_passe_telef"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_border"
                android:id="@+id/blur_password">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/dialog_editTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero_telefone"
                    android:inputType="number"
                    android:maxLength="9"
                    android:background="@android:color/transparent"
                    android:padding="15dp"
                    android:drawableStart="@drawable/ic_baseline_phone_android_24"
                    android:drawableLeft="@drawable/ic_baseline_phone_android_24"
                    android:drawableTint="@color/login_icon_text_color"
                    android:drawablePadding="15dp"
                    android:textColor="@color/login_icon_text_color"
                    />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_btn_cancelar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:background="@drawable/button_background_grey"
                android:layout_height="44dp"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/dialog_btn_enviar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/enviar"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:layout_height="44dp"
                 />

        </LinearLayout>

    </LinearLayout>

<!--    <include layout="@layout/activity_sem_internet" />-->

</androidx.cardview.widget.CardView>