<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="8dp"
    app:cardCornerRadius="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="10dp"
        android:id="@+id/linearLayout_AlterarPass"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgConfirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/txtConfirmTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/login_register_text_color"
            android:text="@string/titulo_confirmar_processo"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lines="2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:id="@+id/txtConfirmMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:lines="2"
            android:textColor="@color/black"
            android:text="@string/msg_confirmar_processo"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/dialog_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="9"
                    android:background="@android:color/transparent"
                    android:padding="15dp"
                    />

            </RelativeLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="18dp"
            android:weightSum="2"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_btn_deny_processo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/negar_confirm"
                android:textColor="@color/white"
                android:background="@drawable/button_background_grey"
                android:layout_height="44dp"

                />

            <Button
                android:id="@+id/dialog_btn_accept_processo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="44dp"
                android:background="@drawable/button_background"
                android:text="@string/aceitar_confirm"
                android:textColor="@color/white"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"/>




        </LinearLayout>

    </LinearLayout>

<!--    <include layout="@layout/activity_sem_internet" />-->

</androidx.cardview.widget.CardView>